--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,8 +32,8 @@ play.i18n.langs = [ "en" ]
 #
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://127.0.0.1:3306/prodeco?characterEncoding=UTF-8"
-db.default.username="root"
-db.default.password="citagro"
+#db.default.username="root"
+#db.default.password="citagro"
 
 ebean.default = ["models.*"]
 
