--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,6 +37,10 @@ db.default.url="jdbc:mysql://127.0.0.1:3306/prodeco?characterEncoding=UTF-8"
 
 ebean.default = ["models.*"]
 
+db.default.partitionCount=1
+db.default.maxConnectionsPerPartition=5
+db.default.minConnectionsPerPartition=5
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
