--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,8 @@ db.default.partitionCount=1
 db.default.maxConnectionsPerPartition=5
 db.default.minConnectionsPerPartition=5
 
+play.evolutions.db.default.autoApply=true
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
