--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,8 +30,8 @@ play.i18n.langs = [ "en" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://127.0.0.1:3306/prodeco?characterEncoding=UTF-8"
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://127.0.0.1:3306/prodeco?characterEncoding=UTF-8"
 #db.default.username="root"
 #db.default.password="citagro"
 
@@ -40,6 +40,9 @@ ebean.default = ["models.*"]
 db.default.partitionCount=1
 db.default.maxConnectionsPerPartition=5
 db.default.minConnectionsPerPartition=5
+db.default.acquireIncrement=1
+db.default.acquireRetryAttempts=1
+db.default.acquireRetryDelay=5 seconds
 
 play.evolutions.db.default.autoApply=true
 
