--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,8 +35,6 @@ play.i18n.langs = [ "en" ]
 #db.default.username="root"
 #db.default.password="citagro"
 
-ebean.default = ["models.*"]
-
 db.default.partitionCount=1
 db.default.maxConnectionsPerPartition=5
 db.default.minConnectionsPerPartition=5
@@ -44,6 +42,8 @@ db.default.acquireIncrement=1
 db.default.acquireRetryAttempts=1
 db.default.acquireRetryDelay=5 seconds
 
+ebean.default = ["models.*"]
+ebeanEnabled = true
 
 play.evolutions.db.default.autoApply=true
 
